# serial_async

./: .gitignore  LICENSE  README.md  config.ini  constants.py  pyproject.toml  requirements.txt  serial_app.py  serial_communication_async.py  serial_communication_old.py  setup.py  test.py  transfer_serial.py
apps/: serial_app.py
config/: config.ini
docs/: README.md
src/: __init__.py  hwt905_ttl_dataparser.py  serial_app.py  serial_communication_async.py
tests/: test.py  test_parityCheck.py
