[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_serial_app_for_witmotion"
version = "1.0.0"
description = "Serial communication application with GUI"
authors = [
    {name = "Koki Lee", email = "riko2501@gmail.com"}
]
dependencies = [
    "pyserial",
    "matplotlib",
    "numpy",
    "PyQt5",
    "qasync",
    "pytest-asyncio",
    "pytest",
]
readme = "README.md"
requires-python = ">=3.9.2"
classifiers = ["License :: OSI Approved :: MIT License"]
license = "MIT"
license-files = ["LICENSE"]
